--- a/report/latex-sample.tex
+++ b/report/latex-sample.tex
@@ -46,9 +46,7 @@ A useful tool for energy disaggregation is the non-intrusive load-monitoring too
 
 
 
-\section{Similar areas}
-
-%TODO: May not want to use this section, if we only have one topic.
+\section{Literature Review/Lay of the Land}
 
 \subsection{Independent Component Analysis}
 ​
@@ -62,16 +60,16 @@ Independent component analysis assumes the $A_t, \dots, E_t$ are statistically i
 ​
 In NILM, the $X_t$ represents the power being used in a house at a certain time. We may assume the coefficients $a, b, \dots, e$ are binary (used or not used in a house). Unfortunately, the power signals $A_t, B_t, \dots, E_t$ are not statistically independent in this task (one may use two different devices at the same time, always put the kettle on when using the toaster, etc.), so we believe that applying independent component analysis will not achieve significantly better results to existing methods. Though it may in practice be possible to reconstruct independent combinations of $A_t$, to be used as an additional feature into a neural network, we do not have plans to implement this at this time. \cite{Aapo}
 
-
-\section{Hidden Markov Models applied using Parsons Method}
+%TODO: Should these be the approach name, or something else?
+\subsection{Hidden Markov Models}
 
 %TODO: I know this is not the right way to do it
-In his masters thesis, Chichetti \cite{Cicchetti}
+In his masters thesis, Chichetti \cite{Cicchetti} examined using Parsons Method for NILM \cite{Cicchetti}}. This method uses one difference Hidden Markov Model (dHMM) per device to describe its consumption and figure out at what time it was active. A dHMM is very similar to an HMM, but it has an additional hidden variables for the difference from the previous to current state. This approach is semi-supervised, because it does need the disaggregated data for training. Instead, it uses prior knowledge about previous appliance signatures.
 
-\subsection{Neural Networks (Kelly and Knottenbelt)}
+%TODO: How well did it do?
 
-Unfortunately, hand-designed features are normally not robust enough to handle noise and artifacts. It is therefore in interest to automatically learn features. Neural Networks provide us with the ability to generate features. Low-layer neural networks do not appear to learn a hierarchy of features complex enough to handle the problem (See Roos, NEED CITATION THOUGH...). Increased computational power has recently enabled us to use deep-layer neural networks to attack the problem of energy disaggregation.
-​
+\subsection{Basic Neural Networks}
+
 Kelly and Knottenbelt identify that often signal reconstruction is not integral to applications. Therefore, they take their task to be identification of a begin time, end time, and overall energy usage of a specific device, during the first cycle it is used. They attempt to solve the problem via an amalgamation of Constitutional, Feed forward, and recurrent neural nets, combined with a denoising error\footnote{Viewing other data as `noise' may also cut out the holistic approach to the problem, removing the problem of global consistency.} and training on each device individually\footnote{This may ignore inherent relationships between different devices (though perhaps the neural networks account for this). Perhaps a way to `double check' nets are correct may provide a more effective, holistic approach.}. Due to the extensive data set one needs to train deep nets, the pair generates synthetic data by combining data with `noise' data\footnote{The data they generate is naive, and we will likely see performance increases from a more realistic generation of data, or through pre-training on large amounts of unlabelled data, then a less extensive training on real data.}. I did not understand how data was selected for training, but I do no it is normalized to have mean zero -- which may or may not reduce the ability to consistently identify features.
 ​
 Questions about the paper:
@@ -114,6 +112,11 @@ Bidirectional networks use forward and backward sequences, which compute ...
 What's nice about these types of neural networks is that we can analyze them as a dynamical system -- which matches up nicely as viewing pre-training as a dynamical system!
 
 Used in \cite{Kelly}.
+
+\subsection{Denoising Autoencoders}
+
+Again, used in \cite{Kelly}.
+%TODO: What is good/bad about them
 ​
 \subsection{Speech Recognition and Pre-training}
 ​
@@ -123,19 +126,17 @@ Vocabulary Conversational Speech
 Recognition, Jaitly, Nguyen, Senior, Vanhocke), (Dahl et al., 2012, Mohamed et al., 2012).
 
 
-%TODO: Which was source 3?
-Known as nonintrusive load monitoring (NILM) various researchers have investigated this problem. Weiss (Source3?) presume the power consumption as a sequence of piecewise constant consumption levels whose differences describe the typical consumption pattern of a distinct device. Since they get remarkable F-scores of 80\% and higher for some devices we also had a look for signal where this assumption holds.
 
-Latest progress was made by applying deep neural nets, where Kelly and Knottenbelt \cite{Kelly} used recurrent neural networks with four hidden layers and achieved positive results for stable-behaving devices, but lacked accuracy for multi-stated ones, leading to a F-score of 51\%. They also considered denoising autoencoders training one neural net per appliance. The neural net takes the power consumption within a sliding window as input and separates the devices consumption from the remaining power. Determining the window size by the usual activity time of the device they achieve an F-score of 70\%. Both of their approaches have in the training phase the separated energy consumption for every device making them supervised ones.
-
-Parson () uses one Hidden Markov Model per device to describe its consumption and figure out at what time it was active. Even though his approach is unsupervised he gets F-scores for up to 85\% for devices with clearly distinguish patterns (e.g. fridges). His results encourage us that unsupervised methods are able to achieve positive results as well. 	
 
 \section{Our Stuff}
+
+%TODO: This one could be useful
+Known as nonintrusive load monitoring (NILM) various researchers have investigated this problem. Weiss (Source3?) presume the power consumption as a sequence of piecewise constant consumption levels whose differences describe the typical consumption pattern of a distinct device. Since they get remarkable F-scores of 80\% and higher for some devices we also had a look for signal where this assumption holds.
 
 Unlike many of the other methods, we are assuming that we do not have the disaggregated power signature for each device during the learning stage. Instead, we assume to instead have accurate information about when each device is active, due to the trend of the "Internet of Things". Where many devices are connected to the internet, and could thus provide information about when they are active.
 %TODO: Get paper for this?
 
-\subsection{Performance Task}
+Our performance task is:
 
 Given the total power usage of a home over time and knowledge of at what times each device was on, can we decompose the aggregated power signal into the power signal for each device?
 
@@ -143,12 +144,12 @@ OR:
 
 Given the total power usage of a home over time, can we determine when each device was active?
 
+How will we evaluate how well we have done?
+
 
 %TODO: Example?
 
-\subsection{Learning Task}
-
-Given the total power usage of several homes and information about when each class of device was on, can we learn a model for each class of device which will allow us to recover the individual device signal from the aggregate power usage?
+To achieve the performance task, we will learn learn a model to recover the individual device signal for each class of device from the total power usage of several homes and information about when each class of device was on.
 
 %TODO: Example?
 
