REPORT: Fix bracket on citation that was stopping the report from compiling.

--- a/report/report.tex
+++ b/report/report.tex
@@ -81,7 +81,7 @@ Though it may in practice be possible to reconstruct independent combinations of
 \subsection{Hidden Markov Models}
 
 %TODO: I know this is not the right way to do it
-In his masters thesis, Chichetti \cite{Cicchetti} examined using Parsons Method for NILM \cite{Cicchetti}}.
+In his masters thesis, Chichetti \cite{Cicchetti} examined using Parsons Method for NILM \cite{Cicchetti}.
 This method uses one difference Hidden Markov Model (dHMM) per device to describe its consumption and figure out at what time it was active.
 A dHMM is very similar to an HMM, but it has an additional hidden variables for the difference from the previous to current state.
 This approach is semi-supervised, because it does need the disaggregated data for training.
