--- a/report/biblio.bib
+++ b/report/biblio.bib
@@ -41,6 +41,39 @@
 	year = "2013"
 }
 
+@inproceedings{Kolter,
+  title={Approximate inference in additive factorial hmms with application to energy disaggregation},
+  author={Kolter, J Zico and Jaakkola, Tommi},
+  booktitle={International conference on artificial intelligence and statistics},
+  pages={1472--1482},
+  year={2012}
+}
+
+@article{Parson,
+  title={Non-intrusive load monitoring using prior models of general appliance types},
+  author={Parson, Oliver and Ghosh, Siddhartha and Weal, Mark and Rogers, Alex},
+  year={2012}
+}
+
+@inproceedings{Weiss,
+  title={Leveraging smart meter data to recognize home appliances},
+  author={Weiss, Markus and Helfenstein, Adrian and Mattern, Friedemann and Staake, Thorsten},
+  booktitle={Pervasive Computing and Communications (PerCom), 2012 IEEE International Conference on},
+  pages={190--197},
+  year={2012},
+  organization={IEEE}
+}
+
+@inproceedings{Redd,
+  title={REDD: A public data set for energy disaggregation research},
+  author={Kolter, J Zico and Johnson, Matthew J},
+  booktitle={Workshop on Data Mining Applications in Sustainability (SIGKDD), San Diego, CA},
+  volume={25},
+  pages={59--62},
+  year={2011},
+}
+
+
 Low Layer Neural Networks
 
 J. Roos, I. Lane, E. Botha, and G. P. Hancke. Using
